asset tag margin fix

--- a/projects/lib/src/admin/components/asset-detail/asset-detail.component.html
+++ b/projects/lib/src/admin/components/asset-detail/asset-detail.component.html
@@ -129,7 +129,7 @@
         <div id="assetTags">
           <button
             *ngFor="let tag of tagOptions; index as i"
-            class="btn btn-sm ml-1"
+            class="btn btn-sm mr-1 mb-1"
             [ngClass]="
               assetForm.Tags && assetForm.Tags.includes(tag)
                 ? 'btn-primary'
