--- a/projects/lib/src/admin/components/page-list/page-list.component.html
+++ b/projects/lib/src/admin/components/page-list/page-list.component.html
@@ -121,7 +121,7 @@
               <cms-status-icon [status]="page.Doc.Active"></cms-status-icon>
               {{ page.Doc.NavigationTitle || page.Doc.Title }}<br />
               <small class="text-muted">
-                Updated by {{ page.Doc.LastUpdatedBy }} on
+                Updated on
                 {{ page.Doc.DateLastUpdated | date: "short" }}
               </small>
             </td>
