fix: cms-page-render and cms-page-preview showing content as editable

--- a/projects/lib/src/admin/components/page-preview-modal/page-preview-modal.component.html
+++ b/projects/lib/src/admin/components/page-preview-modal/page-preview-modal.component.html
@@ -6,7 +6,7 @@
 </div>
 <div class="modal-content" ngbAutoFocus>
   <div class="modal-body">
-    <cms-page-preview [html]="html" [remoteCss]="remoteCss" [deviceDimensions]="deviceDimensions"
+    <cms-page-preview [html]="previewHtml" [remoteCss]="remoteCss" [deviceDimensions]="deviceDimensions"
       [initialPreview]="initialPreview"></cms-page-preview>
   </div>
 </div>
