clean up my mess :crysunglasses:

--- a/projects/lib/src/admin/components/asset-management/asset-management.component.html
+++ b/projects/lib/src/admin/components/asset-management/asset-management.component.html
@@ -40,7 +40,7 @@
           [shrink]="!!assetDetail"
           [(assetDetail)]="assetDetail"
           [showAssetStatus]="showAssetStatus"
-          [selected]="selected"
+          [selectedAsset]="selectedAsset"
           (selectedAssetChange)="handleselectedAssetChange($event)"
           (pageChangeEvent)="handlePageChange($event)"
           [selectable]="selectable"
