Allow custom asset filters
New options:
- cms-page-** has [additionalAssetFilters]?: TemplateRef<any>
- cms-asset-** has [additionalFilters]?: TemplateRef<any>

--- a/projects/lib/src/admin/components/asset-filters/asset-filters.component.html
+++ b/projects/lib/src/admin/components/asset-filters/asset-filters.component.html
@@ -1,4 +1,5 @@
 <div class="p-3 border-right bg-light h-100 overflow-auto">
+  <ng-container *ngTemplateOutlet="additionalFilters"></ng-container>
   <div *ngIf="types && types.length > 1">
     <label for="assetTypes" class="font-weight-bold">Asset Type</label>
     <fieldset id="assetTypes" class="form-group">
