--- a/projects/lib/src/admin/components/page-list/page-list.component.html
+++ b/projects/lib/src/admin/components/page-list/page-list.component.html
@@ -146,6 +146,7 @@
       [document]="selected"
       [tagOptions]="tagOptions"
       [assetTypes]="assetTypes"
+      [additionalAssetFilters]="additionalAssetFilters"
       [defaultListOptions]="defaultListOptions"
       [beforeAssetUpload]="beforeAssetUpload"
       (selectedAssetChange)="selectedAssetChange.emit($event)"
