--- a/projects/lib/src/admin/components/page-editor/page-editor.component.html
+++ b/projects/lib/src/admin/components/page-editor/page-editor.component.html
@@ -29,9 +29,12 @@
         </div>
       </div>
       <div class="flex-grow-0 flex-shrink-1">
+        <button class="btn btn-outline-secondary" (click)="openPreviewModal()">
+          Preview
+        </button>
         <button
           *ngIf="isLoadingSave"
-          class="btn btn-primary"
+          class="btn btn-primary ml-3"
           type="button"
           disabled
         >
@@ -43,12 +46,13 @@
           Saving...
         </button>
         <div
+          [style.display]="'inline-block'"
           placement="left"
           [ngbTooltip]="errorMessage"
           *ngIf="!isLoadingSave"
         >
           <button
-            class="btn btn-primary"
+            class="btn btn-primary ml-3"
             [disabled]="!hasChanges() || !isValid()"
             (click)="onSubmit()"
           >
