WIN-1864 page preview for desktop is cut off

--- a/projects/lib/src/admin/components/page-preview-renderer/page-preview-renderer.component.scss
+++ b/projects/lib/src/admin/components/page-preview-renderer/page-preview-renderer.component.scss
@@ -6,6 +6,12 @@
   &.loading {
     position: relative;
   }
+  max-height: calc(100vh - 200px);
+  overflow: auto;
+  background: #f2f2f2;
+  display: flex;
+  justify-content: center;
+  
 
   &.loading:after {
     content: ' ';
