--- a/projects/lib/src/admin/components/page-preview/page-preview.component.scss
+++ b/projects/lib/src/admin/components/page-preview/page-preview.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 20px 0;
+    padding: 20px 0;
     span {
         cursor: pointer;
         padding: 0 10px;
@@ -10,11 +10,4 @@
             border: 3px solid lightblue;
         }
     }
-}
-
-.preview {
-    overflow: scroll;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
