--- a/projects/lib/src/admin/components/page-preview/page-preview.component.html
+++ b/projects/lib/src/admin/components/page-preview/page-preview.component.html
@@ -1,4 +1,4 @@
-<div class="devices-toolbar">
+<div class="devices-toolbar border-bottom">
   <!-- phone icon -->
   <span class="icon-phone" (click)="preview('phone')" [ngClass]="{ selected: selected === 'phone' }" ngbTooltip="Phone">
     <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
