WIN-1856 add optional input schemaID to page-list and page-editor

--- a/projects/lib/src/admin/components/page-list/page-list.component.html
+++ b/projects/lib/src/admin/components/page-list/page-list.component.html
@@ -141,6 +141,7 @@
       [editorOptions]="editorOptions"
       [resourceType]="resourceType"
       [resourceID]="resourceID"
+      [schemaID]="pageSchemaID"
       [parentResourceType]="parentResourceType"
       [parentResourceID]="parentResourceID"
       [document]="selected"
