add pre document upload hook on page list component

--- a/projects/lib/src/admin/components/page-list/page-list.component.html
+++ b/projects/lib/src/admin/components/page-list/page-list.component.html
@@ -150,6 +150,7 @@
       [additionalAssetFilters]="additionalAssetFilters"
       [defaultListOptions]="defaultListOptions"
       [beforeAssetUpload]="beforeAssetUpload"
+      [beforeDocumentSave]="beforeDocumentSave"
       (selectedAssetChange)="selectedAssetChange.emit($event)"
     >
     </cms-page-editor>
