allow downloadableFileTypes as input to asset management to pass to list

--- a/projects/lib/src/admin/components/asset-management/asset-management.component.html
+++ b/projects/lib/src/admin/components/asset-management/asset-management.component.html
@@ -42,6 +42,7 @@
           [shrink]="!!assetDetail"
           [(assetDetail)]="assetDetail"
           [showAssetStatus]="showAssetStatus"
+          [downloadableFileTypes]="downloadableFileTypes"
           [selectedAsset]="selectedAsset"
           (selectedAssetChange)="handleselectedAssetChange($event)"
           (pageChangeEvent)="handlePageChange($event)"
