disable checkbox for show in navigation if isRequired

--- a/projects/lib/src/admin/components/page-editor/page-editor.component.html
+++ b/projects/lib/src/admin/components/page-editor/page-editor.component.html
@@ -205,6 +205,7 @@
                       class="custom-control-input"
                       id="pageNavigation"
                       type="checkbox"
+                      [disabled]="isRequired"
                       (change)="onPageNavigationChange()"
                       [(ngModel)]="pageNavigation"
                     />
