--- a/projects/lib/src/admin/components/page-preview-modal/page-preview-modal.component.html
+++ b/projects/lib/src/admin/components/page-preview-modal/page-preview-modal.component.html
@@ -1,5 +1,8 @@
 <div class="modal-header">
-  <h4 class="modal-title">{{modalTitle || 'Page Preview'}}</h4>
+  <div>
+    <h4 class="modal-title">{{modalTitle || 'Page Preview'}}</h4>
+    <small>Note: This preview may look different on the live site </small>
+  </div>
   <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('user dismissed modal')">
     <span aria-hidden="true">&times;</span>
   </button>
