update hide date verbiage - hide date means end of selected day

--- a/projects/lib/src/admin/components/section-date-settings/section-date-settings.component.html
+++ b/projects/lib/src/admin/components/section-date-settings/section-date-settings.component.html
@@ -40,7 +40,7 @@
           aria-describedby="endDateHelp"
         />
         <small id="endDateHelp" class="form-text text-muted">
-          This section will hide starting on this date. If left blank, the
+          This section will hide at the end of this date. If left blank, the
           section will remain visible by default.
         </small>
       </div>
