more flexible solution for embeds issues

--- a/projects/lib/src/admin/components/page-editor/page-editor.component.html
+++ b/projects/lib/src/admin/components/page-editor/page-editor.component.html
@@ -353,25 +353,33 @@
             [additionalAssetFilters]="additionalAssetFilters"
             [beforeAssetUpload]="beforeAssetUpload"
             (selectedAssetChange)="selectedAssetChange.emit($event)"
-          ></cms-html-editor>
+          >
+          </cms-html-editor>
         </ng-template>
       </li>
       <li ngbNavItem="3" [destroyOnHide]="false">
         <a ngbNavLink>Embeds</a>
         <ng-template ngbNavContent>
           <div class="alert alert-warning py-3 my-3">
-            The following tags are what is supported in the header and footer
-            embeds:
-            <ul>
-              <li>link</li>
-              <li>meta</li>
-              <li>style</li>
-              <li>script</li>
-              <li>noscript</li>
-            </ul>
+            <p><b> REMINDER: </b></p>
+            <p>
+              Anything you add in the header or footer embeds will
+              <b>not</b> appear on your page. If you wish to add videos, text,
+              links, etc., please refer to the Content tab to add that content.
+            </p>
           </div>
           <div class="form-group">
-            <label for="pageHeaderEmbeds">Header Embeds</label>
+            <label for="pageHeaderEmbeds"
+              >Header Embeds
+              <fa-icon
+                class="text-muted m-1"
+                [icon]="faQuestionCircle"
+                ngbTooltip="This is
+              specifically for any style or script tags needed for third party
+              integrations. If you attempt to add plain text in the header
+              embeds, you will not be allowed to save your changes."
+              ></fa-icon>
+            </label>
             <textarea
               id="pageHeaderEmbeds"
               type="text"
@@ -382,7 +390,16 @@
             ></textarea>
           </div>
           <div class="form-group">
-            <label for="pageFooterEmbeds">Footer Embeds</label>
+            <label for="pageFooterEmbeds"
+              >Footer Embeds
+              <fa-icon
+                class="text-muted m-1"
+                [icon]="faQuestionCircle"
+                ngbTooltip="The only supported tag in the footer embed is a
+              <script>. If you add anything else in the footer
+              embed, you will not be allowed to save your changes."
+              ></fa-icon>
+            </label>
             <textarea
               id="pageFooterEmbeds"
               type="text"
