add plain text verbiage for header and footer tooltip

--- a/projects/lib/src/admin/components/page-editor/page-editor.component.html
+++ b/projects/lib/src/admin/components/page-editor/page-editor.component.html
@@ -374,7 +374,7 @@
               <fa-icon
                 class="text-muted m-1"
                 [icon]="faQuestionCircle"
-                ngbTooltip="This is
+                ngbTooltip="Plain text is not supported in the header embed. This is
               specifically for any style or script tags needed for third party
               integrations. If you attempt to add plain text in the header
               embeds, you will not be allowed to save your changes."
@@ -396,7 +396,7 @@
                 class="text-muted m-1"
                 [icon]="faQuestionCircle"
                 ngbTooltip="The only supported tag in the footer embed is a
-              <script>. If you add anything else in the footer
+              <script>. Plain text is not supported in the footer embed. If you attempt to add plain text or add a non <script> tag in the footer
               embed, you will not be allowed to save your changes."
               ></fa-icon>
             </label>
