provide better verbiage explaining what is supported with embeds

--- a/projects/lib/src/admin/components/page-editor/page-editor.component.html
+++ b/projects/lib/src/admin/components/page-editor/page-editor.component.html
@@ -364,8 +364,11 @@
             <p><b> REMINDER: </b></p>
             <p>
               Anything you add in the header or footer embeds will
-              <b>not</b> appear on your page. If you wish to add videos, text,
-              links, etc., please refer to the Content tab to add that content.
+              <b>not</b> appear on your page. The header and footer embeds are
+              used for any tags needed for third party integrations. If you wish
+              to add plain text, refer to the Content tab to add it to the page.
+              If you wish to add html code (e.g iframes), please refer to
+              Content > View > Source Code and paste the code there.
             </p>
           </div>
           <div class="form-group">
@@ -374,9 +377,8 @@
               <fa-icon
                 class="text-muted m-1"
                 [icon]="faQuestionCircle"
-                ngbTooltip="Plain text is not supported in the header embed. This is
-              specifically for any style or script tags needed for third party
-              integrations. If you attempt to add plain text in the header
+                placement="right"
+                ngbTooltip="Plain text is not supported in the header embed. If you attempt to add plain text in the header
               embeds, you will not be allowed to save your changes."
               ></fa-icon>
             </label>
@@ -395,6 +397,7 @@
               <fa-icon
                 class="text-muted m-1"
                 [icon]="faQuestionCircle"
+                placement="right"
                 ngbTooltip="The only supported tag in the footer embed is a
               <script>. Plain text is not supported in the footer embed. If you attempt to add plain text or add a non <script> tag in the footer
               embed, you will not be allowed to save your changes."
