bug fix: revert to footer and header being optional

--- a/projects/lib/src/admin/components/page-editor/page-editor.component.html
+++ b/projects/lib/src/admin/components/page-editor/page-editor.component.html
@@ -389,6 +389,7 @@
               class="form-control"
               [(ngModel)]="page.HeaderEmbeds"
               placeholder="Copy and paste any scripts you want to execute in the <head> element"
+              (keyup)="onEmbedsChange()"
             ></textarea>
           </div>
           <div class="form-group">
@@ -410,6 +411,7 @@
               class="form-control"
               [(ngModel)]="page.FooterEmbeds"
               placeholder="Copy and paste any scripts you want to execute at the bottom of the <body> element"
+              (keyup)="onEmbedsChange()"
             ></textarea>
           </div>
         </ng-template>
